@@ -1,1 +1,6 @@
 # NumberConversion
+
+
+VM ARGUMENTS 
+
+--module-path $Classpath$ --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.base
